Finished the search function and added a reset button